# LSQRRecipes

./: CMakeLists.txt  GenerateLSQRRecipesConfig.cmake  LSQRRecipesConfig.cmake.in  UseLSQRRecipes.cmake.in  readme.txt
Cmake/Modules/: FindLSQRRecipes.cmake
common/: Epsilon.h  Frame.cxx  Frame.h  IPoint2D.h  Point.h  Point2D.h  Point3D.h  RandomNumberGenerator.h  Ray3D.cxx  Ray3D.h  Vector.h  Vector3D.cxx  Vector3D.h
copyright/: copyright.h
examples/: AbsoluteOrientation.cxx  CMakeLists.txt  crosswireUSCalibration.cxx  lineEstimation.cxx  linearEquationSystemSolver.cxx  pivotCalibration.cxx  planeEstimation.cxx  planeUSCalibration.cxx  pointerUSCalibration.cxx  rayIntersectionEstimation.cxx  readme.txt  sphereEstimation.cxx
examples/Data/: augmentedMatrixWithOutliers.txt  pivotCalibrationDataWithOutliers.txt
parametersEstimators/: AbsoluteOrientationParametersEstimator.cxx  AbsoluteOrientationParametersEstimator.h  DenseLinearEquationSystemParametersEstimator.h  DenseLinearEquationSystemParametersEstimator.hxx  Line2DParametersEstimator.cxx  Line2DParametersEstimator.h  LineParametersEstimator.h  LineParametersEstimator.hxx  ParametersEstimator.h  PivotCalibrationParametersEstimator.cxx  PivotCalibrationParametersEstimator.h  PlaneParametersEstimator.h  PlaneParametersEstimator.txx  PlanePhantomUSCalibrationParametersEstimator.cxx  PlanePhantomUSCalibrationParametersEstimator.h  RANSAC.h  RANSAC.hxx  RANSAC.txx  RayIntersectionParametersEstimator.cxx  RayIntersectionParametersEstimator.h  SinglePointTargetUSCalibrationParametersEstimator.cxx  SinglePointTargetUSCalibrationParametersEstimator.h  SphereParametersEstimator.h  SphereParametersEstimator.hxx  SphereParametersEstimator.txx
testing/: AbsoluteOrientationParametersEstimatorTest.cxx  CMakeLists.txt  DenseLinearEquationSystemParametersEstimatorTest.cxx  LineParametersEstimatorTest.cxx  PivotCalibrationParametersEstimatorTest.cxx  PlaneParametersEstimatorTest.cxx  PlanePhantomUSCalibrationParametersEstimatorTest.cxx  RayIntersectionParametersTest.cxx  SinglePointTargetUSCalibrationParametersEstimatorTest.cxx  SphereParametersEstimatorTest.cxx
testing/Data/: augmentedMatrix.txt  crossWirePhantom2DPoints.txt  crossWirePhantomTransformations.txt  pivotCalibrationData.txt
